# HW_Django_Poetry

./: README.md  catalog.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_product_views_counter_alter_product_created_at_and_more.py  0003_alter_category_description_alter_category_name_and_more.py  0004_alter_product_options.py  0005_product_owner_product_publication.py
catalog/templates/: base.html  contacts.html  home.html  products_detail.html  products_list.html
catalog/templates/catalog/: base.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags_.py
config/: settings.py  urls.py
users/: models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html
