[tool.poetry]
name = "hw-django-poetry"
version = "0.1.0"
description = ""
authors = ["Alexander Tikhonov <AldrTikhonov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
black = "^25.1.0"
pillow = "^11.1.0"
ipython = "^8.32.0"
python-dotenv = "^1.0.1"
django = "4.2.2"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
